[package]
name = "llvm2cretonne-tools"
version = "0.0.0"
authors = ["The Cretonne Project Developers"]
publish = false
repository = "https://github.com/sunfishcode/llvm2cranelift"
license = "Apache-2.0 WITH LLVM-exception"

[[bin]]
name = "llvm2cretonne"
path = "src/llvm2cretonne.rs"

[dependencies]
cretonne-llvm = { path = "lib/llvm" }
cretonne = "0.4.0"
cretonne-reader = "0.4.0"
docopt = "0.8.3"
serde = "1.0.27"
serde_derive = "1.0.27"
term = "0.4.6"
faerie = "0.1.0"
goblin = "0.0.14"

[workspace]
