[package]
name = "cretonne-llvm"
version = "0.0.0"
authors = ["The Cretonne Project Developers"]
publish = false
description = "Translator from LLVM IR to Cretonne IL"
repository = "https://github.com/stoklund/cretonne"
license = "Apache-2.0 WITH LLVM-exception"

[lib]
name = "cton_llvm"

[dependencies]
cretonne = "0.4.0"
cretonne-frontend = "0.4.0"
fnv = "1.0.6"
llvm-sys = "50.0.3"
libc = "0.2.36"
indexmap = "0.4.1"
