[package]
name = "cranelift-llvm"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
publish = false
description = "Translator from LLVM IR to Cranelift IL"
repository = "https://github.com/sunfishcode/cranelift"
license = "Apache-2.0 WITH LLVM-exception"

[lib]
name = "cranelift_llvm"

[dependencies]
cranelift-codegen = "0.15.0"
cranelift-frontend = "0.15.0"
fnv = "1.0.6"
llvm-sys = "50.0.3"
libc = "0.2.36"
indexmap = "0.4.1"
